# gn_build_example

./: .gitattributes  .gitignore  .gitmodules  README.md  build.py
.circleci/: config.yml
buildscripts/: archiver.py  builder.py  gn.py  utils.py  version_generator.py  ziputil.py
buildtools/: README.md
buildtools/darwin/: gn  ninja
buildtools/linux/: gn  ninja
src/: BUILD.gn  src_build_args.gni
src/common/: BUILD.gn  README.md  common_exported_symbols.txt
src/common/impl/: gn_build_example.cc
src/common/include/: gn_build_example.h  gn_build_example_defines.h
src/common/module/: BUILD.gn
src/common/module/base64/: BUILD.gn  LICENSE
src/platform/darwin/: README.md
src/platform/darwin/GNBuildExample/: BUILD.gn  Info-macOS.plist  objc_exported_symbols.txt
src/platform/darwin/GNBuildExample/impl/: GNBuildExample.m
src/platform/darwin/GNBuildExample/include/: GNBuildExample.h  GNBuildExampleDefines.h
